Fixed overflowing images in main content

--- a/app/Resources/public/less/frontend.less
+++ b/app/Resources/public/less/frontend.less
@@ -35,6 +35,9 @@ abbr {
         width: 95%;
         margin-left: 0;
     }
+    img {
+        max-width: 100%;
+    }
 }
 
 .article-list {
